# haifuri

./: .gitignore  README.md  mux-system.py  organize_subtitles.bat  pyproject.toml
.github/workflows/: release.yml  test.yml
songs/: ED.ass  OP.ass
subtitle/: 01.ass  02.ass  03.ass  04.ass  05.ass  06.ass  07.ass  08.ass  09.ass  10.ass  11.ass  12.ass  OVA1.ass  OVA2.ass
