[project]
name = "mux-system"
version = "1.0.0"
description = "MuxTools Automation Script for Anime Muxing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sox>=1.5.0",
    "muxtools @ git+https://github.com/Jaded-Encoding-Thaumaturgy/muxtools",
]

[project.scripts]
mux-system = "mux-system:main"

[dependency-groups]
dev = []
